# TraceSHAP

./: README.md  pyproject.toml  traceshap.yaml.example
docs/research/: framework-adapters-research.md  landscape-analysis.md  layer3-4-experimental-research.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  react-plotly.d.ts
tests/: conftest.py  test_adapter_integration.py  test_adapters_integration.py  test_api.py  test_assembler.py  test_attribution_base.py  test_causal_models.py  test_cli.py  test_config.py  test_convenience.py  test_engine.py  test_graph_builder.py  test_hermes_jsonl_source.py  test_instrument.py  test_kernel_shap.py  test_langgraph_adapter.py  test_layer0.py  test_layer1.py  test_layer2.py  test_layer34_integration.py  test_layer3_replay.py  test_layer4_causal.py  test_models.py  test_normalizer.py  test_otlp_common.py  test_otlp_json_source.py  test_otlp_live_source.py  test_pipeline.py  test_plots.py  test_pruning_advisor.py  test_pruning_safety.py  test_replay_budget.py  test_replay_capsule.py  test_replay_engine.py  test_source_factory.py  test_storage.py
traceshap/: __init__.py  config.py  convenience.py  pipeline.py
traceshap/adapters/: instrument.py  langgraph.py
traceshap/api/: app.py  deps.py  routes_attribution.py  routes_pruning.py  routes_traces.py
traceshap/attribution/: base.py  engine.py  layer0_rules.py  layer1_lift.py  layer2_sequence.py  layer3_replay.py  layer4_causal.py
traceshap/cli/: helpers.py  main.py
traceshap/ingestion/: assembler.py  normalizer.py
traceshap/models/: __init__.py  enums.py  outcome.py  pruning.py  span.py  step.py  (+1 more)
(+40 files in other folders)
